--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -20,6 +20,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="SpecHelper.js"></script>
   <script type="text/javascript" src="FlowGallery.tests.js"></script>
+  <script type="text/javascript" src="FlowGallery.multirow.tests.js"></script>
   <script type="text/javascript" src="FlowGalleryConfig.tests.js"></script>
 
   <script type="text/javascript">
