updated initial flow condition

--- a/demos/index.html
+++ b/demos/index.html
@@ -63,23 +63,23 @@
             <ul id="gallery-multi">
                 <li>
                 <ul>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
+                    <li><img src="images/gallery/img3.jpg" alt="fractal3" title="Photo used under Creative Commons from http://www.flickr.com/photos/tulipvorlax/4324232714" /></li>
+                    <li><img src="images/gallery/img6.jpg" alt="fractal6" /></li>
+                    <li><img src="images/gallery/img8.jpg" alt="fractal8" title="Photo used under Creative Commons from http://www.flickr.com/photos/santarosa/222051450/" /></li>
                 </ul>
                 </li>
                 <li>
                 <ul>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
+                    <li><img src="images/gallery/img3.jpg" alt="fractal3" title="Photo used under Creative Commons from http://www.flickr.com/photos/tulipvorlax/4324232714" /></li>
+                    <li><img src="images/gallery/img6.jpg" alt="fractal6" /></li>
+                    <li><img src="images/gallery/img8.jpg" alt="fractal8" title="Photo used under Creative Commons from http://www.flickr.com/photos/santarosa/222051450/" /></li>
                 </ul>
                 </li>
                 <li>
                 <ul>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
-                    <li><img src="fixtures/images/450x300.png" title="image caption text" alt="image" /></li>
+                    <li><img src="images/gallery/img3.jpg" alt="fractal3" title="Photo used under Creative Commons from http://www.flickr.com/photos/tulipvorlax/4324232714" /></li>
+                    <li><img src="images/gallery/img6.jpg" alt="fractal6" /></li>
+                    <li><img src="images/gallery/img8.jpg" alt="fractal8" title="Photo used under Creative Commons from http://www.flickr.com/photos/santarosa/222051450/" /></li>
                 </ul>
                 </li>
             </ul>
