allow arc argument

--- a/demos/index.html
+++ b/demos/index.html
@@ -25,6 +25,7 @@
           <option value="#demo_multiple_galleries">Multiple galleries on same page</option>
           <option value="#demo_scripting">Controlling gallery through script</option>
           <option value="#demo_multirow">Showing multiple row in gallery</option>
+          <option value="#demo_arc">Drawing thumbnails in arc</option>
         </select>
       </div><!-- #nav -->
       <ul id="tab-bar" class="clearfix">
